ags (2.1.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ref-count in ags_xorg_application_context_test.c
	* fixed project_license in gsequencer.appdata.xml

ags (2.1.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV during grow buffer size in ags_audio_signal_set_buffer_size()
	* fixed potential SIGSEGV during grow buffer size in ags_wave_set_buffer_size()
	* fixed potential SIGSEGV during grow samplerate in ags_audio_signal_set_samplerate()
	* fixed potential SIGSEGV during grow samplerate in ags_wave_set_samplerate()
	* improved ags_functional_osc_server_test_meter_controller() to free data
	* added ags_functional_audio_config_test.c

ags (2.1.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsCellPattern get sequencer counter and set active led
	* improved AgsPatternBox get sequencer counter and set active led
	* improved ags_recall_find_type() and ags_recall_template_find_type() to use g_type_is_a()
	* improved CoreAudio output to use cache
	* removed calls to pango_fc_font_map_cache_clear()
	* fixed ags_pulse_audio_get_next_buffer() index excess
	* fixed AgsOscConnection and AgsOscClient missing variable on apple

ags (2.1.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed resample of AgsAudioSignal and AgsWave only as needed
	* fixed realloc buffer size of AgsAudioSignal and AgsWave only as needed

ags (2.1.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed typo in functional-system-tests.mk.am

ags (2.1.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_wave_find_point() to do bisect
	* added  unit-system-tests.mk.am

ags (2.1.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove message monitor on AgsMachine implementation finalize

ags (2.1.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]